[package]
name = "GeneralsLauncherRust"
version = "0.1.0"
authors = ["Josef Vonasek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
eframe = { version = "0.14" }
image = "0.23"
serde = { version = "1", features = ["derive"], optional = true }
itertools = "0.10.1"

[features]
default = [] #["persistence"]
persistence = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2 # fast and small wasm
